--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,11 @@
         ".vercel/output/**"
       ]
     },
+    "dotenv:pull": {
+      "inputs": [".env.vault", "development"],
+      "outputs": [".env", ".env.*", "!.env.me"],
+      "cache": false
+    },
     "dev": {
       "persistent": true,
       "cache": false
@@ -53,8 +58,6 @@
   },
   "globalEnv": [
     "MONGODB_URI",
-    "AUTH_DISCORD_ID",
-    "AUTH_DISCORD_SECRET",
     "AUTH_REDIRECT_PROXY_URL",
     "AUTH_SECRET",
     "PORT"
