--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@acme/tsconfig/internal-package.json",
   "compilerOptions": {
+    "emitDeclarationOnly": false,
     "outDir": "dist",
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
   },
