--- a/turbo.json
+++ b/turbo.json
@@ -59,6 +59,7 @@
   "globalEnv": [
     "MONGODB_URI",
     "AUTH_REDIRECT_PROXY_URL",
+    "NEXT_PUBLIC_DEPLOYMENT_ENVIRONMENT",
     "AUTH_SECRET",
     "PORT"
   ],
