--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,7 @@
     "next/router.d.ts",
     "next/dist/client/router.d.ts"
   ],
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "conventionalCommits.gitmoji": true,
+  "conventionalCommits.scopes": ["code optimization"]
 }
