--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "create-t3-turbo",
   "private": true,
   "engines": {
-    "node": ">=20.12.0"
+    "node": "^20.0.0"
   },
   "packageManager": "pnpm@9.5.0",
   "scripts": {
@@ -25,6 +25,8 @@
   },
   "devDependencies": {
     "@acme/prettier-config": "workspace:*",
+    "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.4.1",
     "@turbo/gen": "^2.0.6",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.4",
@@ -32,5 +34,10 @@
     "turbo": "^2.0.6",
     "typescript": "catalog:"
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@acme/prettier-config",
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  }
 }
